<resources>
    <string name="app_name">豚鼠游戏</string>
    <string name="login">登录</string>
    <string name="not_login">未登录</string>
    <string name="download_manager">下载</string>
    <string name="my_game">游戏</string>
    <string name="notice">公告</string>
    <string name="feedback">建议</string>
    <string name="feedback_hint">不好的地方请告诉我们，好的地方请告诉你的朋友。豚鼠将努力为你变好变强大！（3-200个字）</string>

    <string name="feedback_submit">提交</string>
    <string name="feedback_isnull">请填写意见3~200字</string>
    <string name="contact_is_wrong">联系方式格式不正确</string>
    <string name="feedback_success">意见提交成功，我们将会尽快答复你</string>
    <string name="feedback_failed">意见提交失败，请重试</string>

    <string name="setting">设置</string>
    <string name="setting_download_tips_title">下载提示</string>
    <string name="setting_download_tips_subtitle">非wifi网络下载提示</string>
    <string name="setting_auto_install_title">自动开启安装</string>
    <string name="setting_auto_install_subtitle">游戏下载完成后自动安装</string>
    <string name="setting_delete_install_package_title">删除安装包</string>
    <string name="setting_delete_install_package_subtitle">安装完成后自动删除安装包</string>
    <string name="setting_download_path_title">APK下载路径</string>
    <string name="setting_download_path_subtitle">显示安装包存储路径</string>

    <string name="about">关于</string>
    <string name="about_item_title1">客服电话</string>
    <string name="about_item_title2">QQ粉丝群</string>
    <string name="about_item_title3">官方微信号</string>
    <string name="about_item_title4">进入官网</string>
    <string name="about_item_subtitle1">400-001-6333</string>
    <string name="about_item_subtitle2">455636123</string>
    <string name="about_item_subtitle3">tunshukj</string>
    <string name="show_all">显示全部</string>

    <string name="no_data">暂无数据</string>
    <string name="recommend">推荐</string>
    <string name="charts">排行</string>
    <string name="classify">分类</string>

    <string name="game_screenshot">截图</string>
    <string name="game_brief_introduction">简介</string>
    <string name="game_info">信息</string>
    <string name="game_comment">评论</string>
    <string name="developer">开发商:&#160;&#160;</string>
    <string name="game_type">游戏类型:&#160;</string>
    <string name="update_time">更新日期:&#160;</string>
    <string name="versioncode">版本信息:&#160;</string>
    <string name="this_update">本次更新</string>

    <string name="immediate_comment">立即评论</string>
    <string name="immediate_login">立即登录</string>
    <string name="search_game">搜索游戏</string>
    <string name="input_tel">请输入手机号</string>
    <string name="input_tel_email">请输入手机号/邮箱</string>
    <string name="input_verification">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="affirm_password">请确认密码</string>
    <string name="send_verification">获取验证码</string>
    <string name="register_account">立即注册</string>
    <string name="register_email_account">使用邮箱注册</string>
    <string name="seconds">秒</string>
    <string name="input_tel_flase">输入的手机号码不正确</string>
    <string name="input_tel_none">请输入手机号码</string>

    <string name="ok">确定</string>
    <string name="counts_down">次下载</string>
    <string name="register">注册</string>
    <string name="send_success">发送成功</string>
    <string name="login_success">登录成功</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_success">注册成功</string>
    <string name="please_input_correct_code">请输入正确的验证码</string>
    <string name="please_input_correct_password">请输入正确的密码</string>
    <string name="please_input_password">密码不能为空</string>
    <string name="please_input_account">登录账号不能为空</string>
    <string name="account_error">登录账号格式错误</string>
    <string name="password_length">密码长度不得少于6位</string>
    <string name="comment_input_hint">我来说两句(3~200个字)</string>
    <string name="comment_length_tips">评论长度3~200个字</string>
    <string name="comment_empty">快来评论吧</string>
    <string name="app_detail">应用详情</string>

    <string name="user_photo">头像</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="address">地址</string>
    <string name="nickname">昵称</string>
    <string name="person_info">个人信息</string>
    <string name="album">  相册</string>
    <string name="take_a_picture">  拍照</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="logout">注销</string>
    <string name="nickname_length_tips">昵称长度：1-16个字</string>
    <string name="remember_password">记住密码</string>
    <string name="save">保存</string>
    <string name="no_search_result">没有搜索到o(╯□╰)o</string>
    <string name="install">安装</string>
    <string name="install_failed">安装失败</string>
    <string name="pause">暂停</string>
    <string name="already_pause">已暂停</string>
    <string name="try_again">重试</string>
    <string name="open">打开</string>
    <string name="go_on">继续</string>
    <string name="delete_download_task">删除当前下载任务？</string>
    <string name="delete_download_task_success">删除下载任务成功</string>
    <string name="delete_download_task_failed">删除下载任务失败</string>
    <string name="wait_install">已下载,等待安装</string>
    <string name="download_failed">下载失败请重试</string>
    <string name="update">更新</string>
    <string name="uninstall">卸载</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="date">日</string>
    <string name="download_count">下载次数：</string>

    <string name="network_not_available">当前网络不可用</string>
    <string name="network_connection">请检查网络连接</string>
    <string name="wechat_moments">朋友圈</string>
    <string name="wechat_friends">微信好友</string>
    <string name="download_wait">等待任务开始</string>
    <string name="no_download_task">马上下载，享受无限体感</string>
    <string name="no_my_game">你还没有安装任何游戏，快去下载吧！</string>
    <string name="exit_info">确定要退出登录吗？</string>
    <string name="input_password_new">请输入新密码</string>
    <string name="special">专区</string>

    <string name="input_password_again">请再次输入密码</string>
    <string name="retrieve_password">找回密码</string>
    <string name="tel">手机</string>
    <string name="email_box">邮箱</string>
    <string name="input_email">请输入邮箱</string>
    <string name="password_inconsistent">输入的密码不一致</string>
    <string name="please_read_treaty">请先阅读并接受《豚鼠科技服务协议条款》</string>
    <string name="email_fail">邮箱格式错误</string>
    <string name="register_agree">我已阅读并接受</string>
    <string name="treaty">《豚鼠科技用户协议》</string>
    <string name="new_version">发现新版本</string>
    <string name="updating">正在更新</string>
    <string name="update_cancel">取消更新</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">稍后再说</string>
    <string name="phone_email_hint">留下你的邮箱或手机号，以便我们回复</string>
    <string name="download_network_change">当前为非WiFi环境，将使用手机流量进行下载，是否继续？</string>
    <string name="open_app">OPEN_ANDROID_APP</string>
</resources>
