<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/public_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="109dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <View style="@style/dividerTheme1" />

                <com.tunshu.widget.ClearEditText
                    android:id="@+id/input_account"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    style="@style/black16"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/input_tel_email"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_text_color" />

                <View
                    style="@style/dividerTheme1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <com.tunshu.widget.ClearEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/black16"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_text_color" />


            </LinearLayout>

            <View style="@style/dividerTheme1" />
            <RelativeLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            <CheckBox
                android:id="@+id/remember_password"
                style="@style/black16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:drawablePadding="3dp"
                android:button="@null"
                android:drawableLeft="@drawable/check_box"
                android:background="@null"
                android:checked="false"
                android:gravity="center_vertical"
                android:text="@string/remember_password" />
                <TextView
                    android:id="@+id/forget_password"
                    android:textSize="14sp"
                    android:textColor="@drawable/bt_text_color_hui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/forget_password" />
            </RelativeLayout>
            <TextView
                android:id="@+id/login_account"
                style="@style/white18"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/down_button_blue"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/immediate_login" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>