<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/main_title"
        layout="@layout/public_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="90dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/setting_download_tips_switch"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/black17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_download_tips_title" />

                    <TextView
                        style="@style/hui13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/setting_download_tips_subtitle" />
                </LinearLayout>

                <com.basecore.widget.switchbutton.SwitchButton
                    android:id="@+id/setting_download_tips_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:checked="true" />
            </RelativeLayout>

            <View
                style="@style/dividerTheme1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="90dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/setting_auto_install_switch"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/black17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_auto_install_title" />

                    <TextView
                        style="@style/hui13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/setting_auto_install_subtitle" />
                </LinearLayout>

                <com.basecore.widget.switchbutton.SwitchButton
                    android:id="@+id/setting_auto_install_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:checked="true" />
            </RelativeLayout>

            <View
                style="@style/dividerTheme1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="90dp">

                <LinearLayout
                    android:id="@+id/delete_install_package_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/setting_delete_install_package_switch"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/black17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_delete_install_package_title" />

                    <TextView
                        style="@style/hui13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/setting_delete_install_package_subtitle" />
                </LinearLayout>

                <com.basecore.widget.switchbutton.SwitchButton
                    android:id="@+id/setting_delete_install_package_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:checked="true" />
            </RelativeLayout>

            <View
                style="@style/dividerTheme1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="90dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/black17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_download_path_title" />

                    <TextView
                        android:id="@+id/setting_download_path_title"
                        style="@style/hui13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />
                </LinearLayout>

            </RelativeLayout>

            <View
                style="@style/dividerTheme1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
