<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/public_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/dividerTheme1"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/et_content"
                style="@style/black16"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/feedback_hint"
                android:maxLength="200"
                android:scrollbars="vertical"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:lineSpacingExtra="3dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/textColorHint" />

            <View style="@style/dividerTheme1" />


            <View
                style="@style/dividerTheme1"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/et_contact"
                style="@style/black16"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:hint="@string/phone_email_hint"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:singleLine="true"
                android:textColorHint="@color/textColorHint" />

            <View style="@style/dividerTheme1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/down_button_blue"
                android:gravity="center"
                android:text="@string/feedback_submit"
                style="@style/white18" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
