<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/public_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <View style="@style/dividerTheme1" />

                <com.tunshu.widget.ClearEditText
                    android:id="@+id/input_account"
                    style="@style/black16"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/input_tel"
                    android:inputType="number"
                    android:singleLine="true"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/icon_delete"
                    android:textColorHint="@color/hint_text_color" />

                <View
                    style="@style/dividerTheme1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/input_verification"
                        style="@style/black16"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@+id/view"
                        android:layout_weight="20"
                        android:background="@null"
                        android:hint="@string/input_verification"
                        android:singleLine="true"
                        android:textColorHint="@color/hint_text_color" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="11dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="11dp"
                        android:background="@color/cut_off_rule" />

                    <TextView
                        android:id="@+id/send_verification"
                        style="@style/black16"
                        android:layout_width="90dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/send_verification" />

                    <ImageView
                        android:id="@+id/image_verification"
                        android:layout_width="90dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:scaleType="fitXY"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    style="@style/dividerTheme1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <com.tunshu.widget.ClearEditText
                    android:id="@+id/input_password"
                    style="@style/black16"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/input_password_new"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_text_color" />

                <View
                    style="@style/dividerTheme1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <com.tunshu.widget.ClearEditText
                    android:id="@+id/input_password_again"
                    style="@style/black16"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/input_password_again"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_text_color" />


            </LinearLayout>

            <View style="@style/dividerTheme1" />


            <TextView
                android:id="@+id/restart_password"
                style="@style/white18"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/down_button_blue"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/finish" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>